@@ -17,9 +17,9 @@ td {border-color: #DDD;}
 
 /* page */
 
-html {font: 16px/1 'Open Sans', sans-serif; overflow: auto; padding: 0.5in; background: #999; cursor: default;}
+html {font: 16px/1 'Open Sans', sans-serif; overflow: auto; padding: 45px; background: #999; cursor: default;}
 
-body {box-sizing: border-box; height: 11in; margin: 0 auto; overflow: hidden; padding: 0.6in; width: 8.5in;line-height: 12px; background: #FFF; border-radius: 1px; box-shadow: 0 0 1in -0.25in rgba(0, 0, 0, 0.5);}
+body {box-sizing: border-box; height: 1100px; margin: 0 auto; overflow: hidden; padding: 60px; width: 840px;line-height: 12px; background: #FFF; border-radius: 1px; box-shadow: 0 0 1in -0.25in rgba(0, 0, 0, 0.5);}
 
 /* header */
 
